<resources>
    <string name="app_name">Exemplo Implicito</string>
    <string name="cometario">Clique no Botão para ver os Exemplos de Intent Implicita</string>
    <string name="btnMapa">Mapa Coordenadas</string>
    <string name="btnMapaBusca">Mapa Busca</string>
    <string name="btnTel">Telefone</string>
    <string name="btnEmail">Email</string>
    <string name="btnWeb">Página Web</string>
    <string name="btnBusca">Busca na Web</string>
    <string name="sendEmail">Enviar email</string>
    <string name="chNavegador">Escolha</string>
</resources>
